--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,16 @@ body
     margin: 0;
     padding: 0;
 }
+
+#cabecera
+{
+    background-color: #33a;
+    box-shadow: 0px 2px 20px 0px;rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
 #container 
 {
     width: 70%;
